[package]
name = "cli-timer"
version = "0.3.38"
authors = ["Giorgi Beriashvili <giorgi.beriashvili@outlook.com>"]
edition = "2018"
description = "Program used to set a timer."
documentation = "https://docs.rs/cli-timer"
homepage = "https://github.com/0rganic/cli-timer"
repository = "https://github.com/0rganic/cli-timer"
readme = "README.md"
keywords = ["rust", "cli", "timer", "application", "beginner-friendly"]
categories = ["command-line-utilities"]
license = "Apache-2.0 OR MIT"

[dependencies]
structopt = "0.2.15"
chrono = "0.4.6"
log = "0.4.6"
pbr = "1.0.1"