[package]
name = "cli-timer"
version = "0.3.70"
authors = ["Giorgi Beriashvili <giorgi.beriashvili@outlook.com>"]
edition = "2018"
description = "Program used to set a timer."
documentation = "https://docs.rs/cli-timer"
homepage = "https://github.com/0rganic/cli-timer"
repository = "https://github.com/0rganic/cli-timer"
readme = "README.md"
keywords = ["rust", "cli", "timer", "application", "beginner-friendly"]
categories = ["command-line-utilities"]
license = "Apache-2.0 OR MIT"

# [badges]
# azure-pipelines = { repository = "https://dev.azure.com/giorgiberiashvili/cli-timer", branch = "master" }
# maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4.6"
dirs = "1.0.5"
log = "0.4.6"
pbr = "1.0.1"
rodio = "0.8.1"
structopt = "0.2.15"
termcolor = "1.0.4"